testsuite/tests/typecheck/should_fail/T13819.stderr

T13819.hs:12:17: error:
    • Expected kind ‘* -> *’, but ‘_ -> WrappedMonad A _’ has kind ‘*’
    • In the type ‘(_ -> WrappedMonad A _)’
      In the expression: pure @(_ -> WrappedMonad A _) @(_ -> A _) pure
      In an equation for ‘pure’:
          pure = pure @(_ -> WrappedMonad A _) @(_ -> A _) pure
